force-app/main/default/objects/Threat_Tier_Mappings__mdt/Threat_Tier_Mappings__mdt.object-meta.xml
<CustomObject>
    <label>Threat Tier Mappings</label>
    <pluralLabel>Threat Tier Mappings</pluralLabel>
</CustomObject>