force-app/main/default/objects/Threat_Tier_Mappings__mdt/fields/Accessories_Threat_Tier__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Threat_Tier__c</fullName>
    <label>Accessories Threat Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>