force-app/main/default/objects/Threat_Tier_Mappings__mdt/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <referenceTo>Accessories_to_SFA_Field_Mappings__mdt</referenceTo>
    <relationshipLabel>Threat Tier Mappings</relationshipLabel>
    <relationshipName>Threat_Tier_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>