force-app/main/default/objects/Threat_Tier_Mappings__mdt/fields/Minimum_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Support_Level__c</fullName>
    <label>Minimum Support Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>